[package]
name = "monero-block-explorer"
version = "0.1.0"
authors = ["lalanza808 <lance@lzahq.tech>"]
edition = "2018"
description = "Simple web application for querying nodes to retrieve information about the Monero blockchain."

[dependencies]
rocket = "0.4.4"
rocket_contrib = {version = "0.4.4", features = ["handlebars_templates", "tera_templates"]}
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
reqwest = { version = "0.10.4", features = ["blocking", "json"] }
openssl = { version = "0.10", features = ["vendored"] }
qrcode-generator = "1.0.6"
base64 = "0.12.0"
